Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
7.0.0
Description
Is it possible for the user to increase the timeout allowed on the curl settings when accessing S3 records? The default setting appears to be more aggressive than most other S3 clients I use, which means that I see a lot more failures on arrow-based operations than the other clients see. I'm not seeing how this can be increased though?
Attachments
Issue Links
- relates to
-
ARROW-17302 [R] Configure curl timeout policy for S3
-
- Resolved
-
- links to