ARROW-16521 [C++][Python] Configure curl timeout policy for S3 (#13385)

added timeout options to c++ and python s3fs

Lead-authored-by: Ziheng Wang <zihengw@Zihengs-MacBook-Pro.local>
Co-authored-by: Ziheng Wang <ziheng@mit.edu>
Co-authored-by: Ziheng Wang <zihengw@stanford.edu>
Co-authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Joris Van den Bossche <jorisvandenbossche@gmail.com>